<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.unicore.iouarttest.MainActivity" >
    
   <LinearLayout 
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:orientation="horizontal"
       >
       
        <CheckBox 
        android:text="@string/auto_send"
        android:id="@+id/checkBox"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        />
        
        
        <View 
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="match_parent"
            android:layout_width="0.5dp"
            android:background="@android:color/darker_gray"
            />
        <Spinner
        android:prompt="@string/format_spinner_prompt"
        android:spinnerMode="dialog"
        android:id="@+id/format_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/format_list" />
        
   </LinearLayout>
    

    <Spinner
        android:prompt="@string/uart_spinner_prompt"
        android:spinnerMode="dialog"
        android:id="@+id/uart_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/uart_list" />
    <Spinner
        android:prompt="@string/baudrate_spinner_prompt"
        android:spinnerMode="dialog"
        android:id="@+id/baudrate_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/baudrate_list" />
    
   <RelativeLayout 
       android:layout_height="0dp"
       android:layout_width="match_parent"
       android:layout_weight="15"
       >
        <ScrollView 
	    android:id="@+id/scrollView"
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"
	    >
	    
       <!--  android:background="@drawable/edittext_shape" -->
    <TextView
        android:hint="@string/receiverd_data"
        android:padding="5dp"
        android:id="@+id/received_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
	</ScrollView>
   </RelativeLayout>
    
    <LinearLayout 
        android:layout_marginTop="5dp"
        android:layout_weight="3.5"
		android:layout_height="0dp"    
		android:layout_width="match_parent"
		android:orientation="horizontal"    
        >

        <EditText
            android:focusableInTouchMode="true"
            android:id="@+id/send_msg"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:text="@string/test_text"
            tools:ignore="NestedWeights" />
        
        <Button 
            android:id="@+id/send_msg_button"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/send_msg_bt"
            />
    </LinearLayout>


</LinearLayout>